<resources>
    <string name="app_name">TaxiUser</string>
    <string name="google_maps_key" translatable="false">AIzaSyBcszOHVLH_XNm0BrcCjTxz59LDBak2qBs</string>
    <string name="api_key" translatable="false">AIzaSyAAjp4wuz5FyteoKH3Yp7Cv8pS1K86fJw0</string>
    <string name="facebook_app_id">644030573631148</string>
    <string name="fb_login_protocol_scheme">fb644030573631148</string>
    <string name="logo">LOGO</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email_not_found">Email is not registered with us</string>
    <string name="reset_pass_msg">Reset password link sent to your mail-id</string>
    <string name="enter_name_text">Please enter your name</string>
    <string name="enter_name_firsttext">Please enter your first name</string>
    <string name="enter_name_lasttext">Please enter your last name</string>
    <string name="enter_email_text">Please enter your email</string>
    <string name="enter_business_email_text">Please enter business email</string>
    <string name="enter_phone_text">Please enter your phone number</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="please_enter_pass">Please enter password</string>
    <string name="enter_city_text">Please select your city</string>
    <string name="enter_address1_text">Please enter your home address</string>
    <string name="enter_work_text">Please enter your work address</string>
    <string name="enter_address2_text">Please select home address 2</string>
    <string name="enter_number_plate">Please enter number plate</string>
    <string name="mandatory_fields_text">All fields are mandatory</string>
    <string name="password_validation_text">Password should be 8 characters or long</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_login_with_social_account">Or login with social account</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="submit">Submit</string>
    <string name="forgotpasswordtext">Please, enter your email address. You will
       <br /> receive a link to create a new password via <br /> email. </string>
    <string name="forgot_password">Forgot Password</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="we_sent_4_digit_code_to_your_phone">We sent 6 digit code to your phone</string>
    <string name="resend">Resend</string>
    <string name="please_select_the_reason_for_cancellation">Please select the reason<br /> for cancellation:</string>
    <string name="i_don_t_want_to_share">I don’t want to share</string>
    <string name="can_t_contact_the_driver">Can\'t contact the driver</string>
    <string name="driver_is_late">Driver is late</string>
    <string name="the_price_is_not_reasonable">The price is not reasonable</string>
    <string name="pickup_address_is_incorrect">Pickup address is incorrect</string>
    <string name="verify">Verify</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="term_text">I accept all the <font fgcolor="#F6E24F">Terms and Conditions</font></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city_name">City</string>
    <string name="home_add">Home Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="estimated_trip_time">Estimated trip time</string>
    <string name="available_balance">Available Balance</string>
    <string name="i_m_coming">I\'m Coming</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="home">Home</string>
    <string name="ride_history">Ride History</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="wallet">Wallet</string>
    <string name="promocode">Promocodes</string>
    <string name="change_language">Change Language</string>
    <string name="select_pick_up_address">Select Pick Up Address</string>
    <string name="sel_destination">Select Destination Address</string>
    <string name="next">Next</string>
    <string name="transactions">Transactions</string>
    <string name="recharge">Recharge</string>
    <string name="update_picture">Update Picture</string>
    <string name="save_details">Save Details</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="italian">Italian</string>
    <string name="german">German</string>
    <string name="save">Save</string>
    <string name="kung_fu_chau_added_new_images_in_furniture_and_garden">Kung Fu Chau added new images in Furniture and Garden.</string>
    <string name="apply_now">Apply Now</string>
    <string name="type_a_message">Type a message</string>
    <string name="your_taxi_has_arrived">Your taxi has arrived</string>
    <string name="call">Call</string>
    <string name="searching_for_a_driver">Searching for a driver...</string>
    <string name="msg">Message</string>
    <string name="rate">Rate</string>
    <string name="payment_options">Payment Options</string>
    <string name="select_payment">Select Payment</string>
    <string name="card_payment">Card Payment</string>
    <string name="cash">Cash</string>
    <string name="trip_finish_text">Your trip is finished! Please do the payment</string>
    <string name="ok">Ok</string>
    <string name="your_trip_has_ended">Your Trip has ended</string>
    <string name="book_ride">Book Ride</string>
    <string name="please_check_internet">Please check your internet connection!</string>
    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="terms_condition_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="please_accept_terms">Please accept terms and condition</string>
    <string name="please_upload_profile">Please upload profile picture</string>
    <string name="check_internet_text">Please check your internet connection!</string>
    <string name="invalid_otp">Invalid Otp</string>
    <string name="please_wait">Please wait...</string>
    <string name="enter_6_digit_code">Please enter 6 digit verification code</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="select_the_service">Select The Service</string>
    <string name="available_drivers">Available Drivers</string>
    <string name="available_pool_drivers">Available Pool Drivers</string>
    <string name="send_request_to_driver">Send Request To Driver</string>
    <string name="enter_number_of_passenger">Enter Number of Passenger</string>
    <string name="office">Office</string>
    <string name="where_to">Where To ?</string>
    <string name="cancel">Cancel</string>
    <string name="fav_locations">Favorite Locations</string>
    <string name="home_place">Home Place</string>
    <string name="work_place">Work Place</string>
    <string name="set_current_loc">Set Current Location</string>
    <string name="recent_locations">Recent Locations</string>
    <string name="work_address">Work Address(Optional)</string>
    <string name="done">Done</string>
    <string name="please_select_pickup_loc">Please select pickup location</string>
    <string name="please_select_drop_loc">Please select drop location</string>
    <string name="deti_is_added_in_recent">Destination is added in recent locations</string>
    <string name="your_request_is_successfully_accepted">Your request is successfully Accepted!</string>
    <string name="select_car_type">Please select Car type</string>
    <string name="select_payment_type">Select Payment Method</string>
    <string name="cash_pay">Cash Pay</string>
    <string name="wallet_pay">Wallet Pay</string>
    <string name="car_pay">Card Pay</string>
    <string name="select_pay_text">Please select payment method</string>
    <string name="success">Success</string>
    <string name="please_add_work_address">Please add work address</string>
    <string name="please_add_home_address">Please add home address</string>
    <string name="close_app_text">Are you sure you want to close the app ?</string>
    <string name="sure_request_cancel">Are you sure you want to cancel this request ?</string>
    <string name="request_cancel_text">Your request has been cancelled.</string>
    <string name="please_select_reason">Please select the reason</string>
    <string name="do_payment">Do Payment</string>
    <string name="ride_has_ended">Ride has ended</string>
    <string name="payment_type">Payment Type</string>
    <string name="trip_finished">Trip Finished</string>
    <string name="rate_driver">Rate Driver</string>
    <string name="feedback">Feedback</string>
    <string name="please_enter_comments">Please enter comment</string>
    <string name="no_history_found">No History Found</string>
    <string name="see_active_bookings_text">Your Scheduled booking is accepted press to see active bookings</string>
    <string name="request_accepted_by_driver">Your request is accepted by the driver</string>
    <string name="schedule_ride">Schedule Ride</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="please_select_date">Please select date</string>
    <string name="please_select_time">Please select time</string>
    <string name="already_in_ride">You are already in ride</string>
    <string name="your_booking_is">Your Booking time is : </string>
    <string name="not_allowed_to_access_trip">Not allowed to access because your booking date is : </string>
    <string name="stops">Stops</string>
    <string name="contact_us">Contact Us</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="your_feedback_is_very_impoortant_to_us_we_consider_your_feedback_very_seriously_and_work_hard_to_provide_you_with_the_best_possible_solution_at_the_earliest">Your feedback is very impoortant to us. We consider your feedback very seriously and work hard to provide you with the best possible solution at the earliest.</string>
    <string name="what_s_your_feedback_about">What\'s your feedback about?</string>
    <string name="tap_to_write">Tap to write...</string>
    <string name="please_tell_us_something_in_detail">Please tell us something in detail</string>
    <string name="business">Business</string>
    <string name="you_can_choose_a_personal_or_business_profile_by_tapping_on_the_payment_method_when_you_are_requesting_for_a_service">You can choose a personal or business profile by tapping on the payment method when you are requesting for a service.</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="business_email">Business Email</string>
    <string name="you_can_also_update_your_business_email_here">You can also update your business email here</string>
    <string name="no_data_found">no data found</string>
    <string name="select">Select</string>
</resources>