<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_new"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_back_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:text="@string/contact_us"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/contact_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/how_can_we_help_you"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/your_feedback_is_very_impoortant_to_us_we_consider_your_feedback_very_seriously_and_work_hard_to_provide_you_with_the_best_possible_solution_at_the_earliest"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/what_s_your_feedback_about"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/tap_to_write"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:singleLine="true"
            android:background="@color/white"
            android:layout_marginTop="@dimen/_2sdp"
            android:imeOptions="actionNext"
            android:includeFontPadding="false"
            android:inputType="textVisiblePassword"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/please_tell_us_something_in_detail"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/etdetail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/please_tell_us_something_in_detail"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:singleLine="true"
            android:gravity="top"
            android:background="@color/white"
            android:layout_marginTop="@dimen/_2sdp"
            android:imeOptions="actionNext"
            android:includeFontPadding="false"
            android:inputType="textVisiblePassword|textMultiLine"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/login_bt_back_yellow"
            android:fontFamily="@font/poppins_medium"
            android:padding="@dimen/_10sdp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>