<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/_170sdp"
                android:background="@color/yellow"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:src="@drawable/white_back" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:src="@drawable/business_profile_icon" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/business"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/you_can_choose_a_personal_or_business_profile_by_tapping_on_the_payment_method_when_you_are_requesting_for_a_service"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/outline_black_border_5"
                android:cursorVisible="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:hint="@string/email"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/business_email"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <EditText
                android:id="@+id/etBusinessEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/outline_black_border_5"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:hint="@string/business_email"
                android:textColorHint="@color/black"
                android:maxLines="1"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/you_can_also_update_your_business_email_here"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/tvSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvDeleteAccount"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/outline_green_back"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/green_spalsh"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/tvDeleteAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/red_outline_back"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/delete_profile"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="@dimen/_16sdp" />

    </RelativeLayout>

</layout>