<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:background="@color/white"
            android:elevation="@dimen/_5sdp">


            <RelativeLayout
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@color/white">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_back_black"
                    app:tint="@color/black">

                </ImageView>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/select_the_service"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"/>
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvServices"
            android:layout_below="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            tools:listitem="@layout/item_servicess"
            android:layout_above="@+id/btnApply"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />

        <TextView
            android:id="@+id/tvNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_found"
            android:layout_centerInParent="true"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:visibility="gone"/>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnApply"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:background="@color/yellow"
            android:text="@string/select"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textAllCaps="false"
            />



    </RelativeLayout>
</layout>